casino con il menu e l'articolo singolo

--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,5 +1,10 @@
 <h2><%=l(:details_articolo)%></h2>
   In questa pagina:
+<h3> id= <%= @id %>
+  <%= @issue.riassunto %>
+
+
+</h3>
   <ul> 
     <li>Presentazione di un articolo</li>
     <li>PERMESSI sulla vissualizzazione dei contenuti</li>
