copiate le parti interessate

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -89,6 +89,7 @@
 </head>
 <body>
 <div id="fs-main">
+ <%= render_menu  :account_fe_menu  %>
   <header class="fs-header clearfix">
     <div class="fs-shapes">
       <h1 class="fs-headline" data-left="2.62%">
@@ -122,7 +123,7 @@
       </div>
     </div>
               <%#sidebar a destra %>
-          <%= render :partial => 'footer' %>
+          <%# render :partial => 'footer' %>
   </div>
 
 </div> <%#fs-main%>
