--- a/public/stylesheets/editorial.css
+++ b/public/stylesheets/editorial.css
@@ -1,4 +1,19 @@
 /* Created by ... */
+/* menu per l'itente in cima */
+#top-menu-fe {background: #24200b; color: #fff; height:1.8em; font-size: 0.8em; padding: 2px 2px 0px 6px;}
+#top-menu-fe ul ul {margin: 0;  padding: 0;}
+#top-menu-fe li li {
+  float:left;
+  list-style-type:none;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  white-space:nowrap;
+}
+#top-menu-fe a {color: #fff; margin-right: 8px; font-weight: bold;}
+#top-menu-fe #loggedas { float: right; margin-right: 0.5em; color: #fff; }
+
+#account_fe {float:right;}
+/* fine menu dell'utente */
 
 #fs-main {
     background: #000000;
