--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -15,36 +15,38 @@
 <%# css %>
   <style>
 
-  .ie7 .post .layout-cell {
-      border: none !important;
-      padding: 0 !important;
-  }
+      .ie7 .post .layout-cell {
+          border: none !important;
+          padding: 0 !important;
+      }
 
-  .ie6 .post .layout-cell {
-      border: none !important;
-      padding: 0 !important;
-  }
+      .ie6 .post .layout-cell {
+          border: none !important;
+          padding: 0 !important;
+      }
 
-  .ie7 .post .layout-cell {
-      border: none !important;
-      padding: 0 !important;
-  }
+      .ie7 .post .layout-cell {
+          border: none !important;
+          padding: 0 !important;
+      }
 
-  .ie6 .post .layout-cell {
-      border: none !important;
-      padding: 0 !important;
-  }
+      .ie6 .post .layout-cell {
+          border: none !important;
+          padding: 0 !important;
+      }
 
   </style>
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'application_fs', :media => 'all' %>
   <%= stylesheet_link_tag 'editorial', :media => 'all' %>
-  <%= stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
-  <%= stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
+  <!-- queste erano di defailt ? si possono  cancellare? non sembrano avere effetto alcuno almeno in FE -->
+  <%# stylesheet_link_tag 'rtl', :media => 'all' if l(:direction) == 'rtl' %>
+  <%# stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
+  <!-- fine di: queste erano di defailt ?... -->
 <%# jquery %>
   <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
   <%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
-  <%= javascript_include_tag "jquery/script.responsive.js" %>
+  <%= javascript_include_tag "script.responsive.js" %>
 
   <!--   <script src="script.js"></script>
 <script src="script.responsive.js"></script>     -->
@@ -89,52 +91,54 @@
 </head>
 <body>
 <div id="fs-main">
-  <div id="top-menu-fe">
-      <div id="account-fe">
-          <%= render_menu :account_menu_ -%>
-      </div>
-      <%= content_tag(
-             'div',
-             "#{l(:label_logged_as)} #{link_to_user(User.current, :format => :username)}".html_safe,
-             :id => 'loggedas') if User.current.logged? %>
-      <%= render_menu :top_menu if User.current.logged? || !Setting.login_required? -%>
-      <%# render_menu :application_menu if !User.current.logged? %>
-  </div>
-
   <header class="fs-header clearfix">
     <div class="fs-shapes">
-      <h1 class="fs-headline" data-left="2.62%">
+     <!--
+      <div id="top-menu-fe">
+        <div id="account-fe">
+          <%= render_menu :account_fe_menu -%>
+          <%#render_menu :account_fe_menu -%>
+        </div>
+        <%= content_tag(
+                    'div',
+                    "#{l(:label_logged_as)} #{link_to_user(User.current, :format => :username)}".html_safe,
+                    :id => 'loggedas-fe') if User.current.logged? %>
+        <%# render_menu :top_menu if User.current.logged? || !Setting.login_required? -%>
+        <%=render_menu :application_menu if !User.current.logged? %>
+      </div>
+     -->
+      <h1 class="fs-headline" >
         <a href="#">Professionisti Esperti in Materie Fiscali Sportive</a>
       </h1>
 
-      <div class="fs-logo" data-left="100%"></div>
+      <div class="fs-logo" ></div>
 
-    </div>
+
     <div class="fs-textblock fs-cerca" data-left="3.07%">
       <form class="fs-search" name="Search" action="javascript:void(0)">
         <input type="text" value="">
         <input type="submit" value="Search" name="search" class="fs-search-button">
       </form>
-    </div>
+    </div></div>
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
     </nav>
   </header>
   <div class="fs-sheet-nav clearfix">
     <nav class="fs-2nav clearfix">
-      <%= render_navigation  :level => 2  %>
+      <%= render_navigation :level => 2 %>
     </nav>
   </div>
   <div class="fs-sheet clearfix">
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
-            <%= yield %>
+          <%= yield %>
         </div>
       </div>
     </div>
-              <%#sidebar a destra %>
-          <%# render :partial => 'footer' %>
+    <%#sidebar a destra %>
+    <%# render :partial => 'footer' %>
   </div>
 
 </div> <%#fs-main%>
