--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -90,8 +90,6 @@
 <body>
 <div id="fs-main">
   <header class="fs-header clearfix">
-
-
     <div class="fs-shapes">
       <h1 class="fs-headline" data-left="2.62%">
         <a href="#">Professionisti Esperti in Materie Fiscali Sportive</a>
@@ -109,10 +107,12 @@
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
     </nav>
+  </header>
+  <div class="fs-sheet-nav clearfix">
     <nav class="fs-2nav clearfix">
       <%= render_navigation  :level => 2  %>
     </nav>
-  </header>
+  </div>
   <div class="fs-sheet clearfix">
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
