--- a/app/views/editorial/home.html.erb
+++ b/app/views/editorial/home.html.erb
@@ -1,4 +1,3 @@
-
 <div class="fs-layout-cell fs-content clearfix">
 <article class="fs-post fs-article">
   <% @issues.each do |articolo| %>
@@ -7,7 +6,7 @@
           <div class="fs-content-layout-row">
             <div class="fs-layout-cell layout-item-0" style="width: 100%">
               <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-                <%=link_to h(truncate(articolo.titolo, :length => 200)), :controller =>  'sezione/'+  articolo.section.top_section_id.to_s  , :action => 'articolo', :id => articolo.id %>
+                <%=link_to h(truncate(articolo.titolo, :length => 200)), :controller =>  articolo.section.top_section.key + '/sezione/'+  articolo.section.top_section_id.to_s  , :action => 'articolo', :id => articolo.id %>
               </h4>
                  <span style="color:#ffffff;" class="fs-sections"><%= articolo.top_section %> > <%= articolo.section %>
                 </span>
