--- a/public/stylesheets/editorial.css
+++ b/public/stylesheets/editorial.css
@@ -490,15 +490,11 @@ li p, .fs-postcontent li p, .fs-blockcontent li p {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-<<<<<<< HEAD
+
     margin: 10px auto 0;
     margin-top: 0px;
     /*height: 110px;*/
     height: 100px;
-=======
-    margin: 0 auto;
-    min-height: 110px;
->>>>>>> varie
     background-image: url('/images/fe-bk01/header.png');
     background-position: center top;
     background-repeat: no-repeat;
@@ -543,8 +539,8 @@ li p, .fs-postcontent li p, .fs-blockcontent li p {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    margin: 10px auto 0;
-    margin-top: -15px;
+    margin: 0 auto;
+    /*margin-top: -15px;   */
     position: relative;
     cursor: auto;
     width: 78%;
