--- a/app/views/editorial/top_menu.html.erb
+++ b/app/views/editorial/top_menu.html.erb
@@ -16,7 +16,7 @@
                 </span>
                 <br/>
                 <%= articolo.riassunto %>
-                <%= link_to "Continua... ", {:controller => 'issues', :action => 'show', :id => articolo.id} %>
+                <%= link_to "Continua... ", {:controller => 'editorial', :action => 'articolo', :id => articolo.id} %>
             </div>
           </div>
         </div>
