--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -47,6 +47,8 @@
   <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
   <%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
+  <%= javascript_include_tag "script.js" %>
+  <%= javascript_include_tag "jquery.jcarousel.min.js" %>
 
   <!--   <script src="script.js"></script>
 <script src="script.responsive.js"></script>     -->
