--- a/app/views/mio_profilo/password.html.erb
+++ b/app/views/mio_profilo/password.html.erb
@@ -1,9 +1,12 @@
-<h2><%=l(:label_password_lost)%></h2>
+<h2><%=l(:button_change_password)%></h2>
 
 <%= error_messages_for 'user' %>
 
-<% form_tag({:token => @token.value}) do %>
-<div class="box tabular">
+<% form_tag({}, :class => "tabular") do %>
+<div class="box">
+<p><label for="password"><%=l(:field_password)%> <span class="required">*</span></label>
+<%= password_field_tag 'password', nil, :size => 25 %></p>
+
 <p><label for="new_password"><%=l(:field_new_password)%> <span class="required">*</span></label>
 <%= password_field_tag 'new_password', nil, :size => 25 %><br />
 <em><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em></p>
@@ -11,5 +14,9 @@
 <p><label for="new_password_confirmation"><%=l(:field_password_confirmation)%> <span class="required">*</span></label>
 <%= password_field_tag 'new_password_confirmation', nil, :size => 25 %></p>
 </div>
-<p><%= submit_tag l(:button_save) %></p>
+<%= submit_tag l(:button_apply) %>
+<% end %>
+
+<% content_for :sidebar do %>
+<%= render :partial => 'sidebar' %>
 <% end %>
