secondo image rotator per banner

--- a/app/views/editorial/_blocco_sidebar1.erb
+++ b/app/views/editorial/_blocco_sidebar1.erb
@@ -18,8 +18,8 @@
       <h3 class="t">Blocco banners</h3>
     </div>
 
-    <div class="fs-blockcontent">
-      <%= render :partial => 'blocco_banners' %>
+
+      <%= render :partial => 'blocco_banners1' %>
 
       <!--
 
@@ -63,7 +63,7 @@
           <p class="nodata"><%= l(:label_no_data) %></p>
       <% end %>
 
-    </div>
+
   </div>
 
 </div>
