prima-pagina e varie.

--- a/app/views/editorial/_blocco_banners1.erb
+++ b/app/views/editorial/_blocco_banners1.erb
@@ -7,8 +7,8 @@
             <img src="/images/banners/1.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?knight_lady">The Knight and the Lady</a>
-            <span class="cat">Category: Illustrations</span>
+            <a href="http://www.vladstudio.com/wallpaper/?knight_lady">Didascalia</a>
+           <!-- <span class="cat">Category: Illustrations</span>   -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -18,8 +18,8 @@
             <img src="/images/banners/2.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?family_of_colors">The Family of Colors</a>
-            <span class="cat">Category: Creatures</span>
+            <a href="http://www.vladstudio.com/wallpaper/?family_of_colors">Didascalia</a>
+            <!-- <span class="cat">Category: Creatures</span> -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -28,8 +28,8 @@
             <img src="/images/banners/3.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?teddybear_mac">Teddy Bear and MacBook</a>
-            <span class="cat">Category: Photos</span>
+            <a href="http://www.vladstudio.com/wallpaper/?teddybear_mac">Didascalia</a>
+            <!--  <span class="cat">Category: Photos</span>              -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -38,8 +38,8 @@
             <img src="/images/banners/4.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?rainbow_butterfly">Rainbow Butterfly</a>
-            <span class="cat">Category: Abstract art</span>
+            <a href="http://www.vladstudio.com/wallpaper/?rainbow_butterfly">Didascalia</a>
+          <!--   <span class="cat">Category: Abstract art</span>        -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -48,8 +48,8 @@
             <img src="/images/banners/5.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?space_travel">Space Travel</a>
-            <span class="cat">Category: Abstract art</span>
+            <a href="http://www.vladstudio.com/wallpaper/?space_travel">Didascalia</a>
+         <!--   <span class="cat">Category: Abstract art</span>    -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -58,8 +58,8 @@
             <img src="/images/banners/6.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?traveling_tree">The Traveling Tree</a>
-            <span class="cat">Category: Creatures</span>
+            <a href="http://www.vladstudio.com/wallpaper/?traveling_tree">Didascalia</a>
+         <!--    <span class="cat">Category: Creatures</span>   -->
           </div>
           <div class="cleared"></div>
         </li>
@@ -68,8 +68,8 @@
             <img src="/images/banners/7.jpg">
           </div>
           <div class="info">
-            <a href="http://www.vladstudio.com/wallpaper/?traveling_tree">balla bla</a>
-            <span class="cat">Category: Creatures</span>
+            <a href="http://www.vladstudio.com/wallpaper/?traveling_tree">Didascalia</a>
+         <!--    <span class="cat">Category: Creatures</span>    -->
           </div>
           <div class="cleared"></div>
         </li>
