--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -108,7 +108,7 @@
     <div class="fs-shapes">
       <div id="top-menu-fe">
         <div id="account-fe">
-          <%= render_menu :account_fe_menu -%>
+          <%= render_menu :account_menu -%>
           <%#render_menu :account_fe_menu -%>
         </div>
         <%= content_tag(
