--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,3 +1,64 @@
+<div class="fs-layout-cell fs-content clearfix">
+<article class="fs-post fs-article">
+  <% @issues.each do |articolo| %>
+      <div class="fs-postcontent fs-postcontent-0 clearfix">
+        <div class="fs-content-layout">
+          <div class="fs-content-layout-row">
+            <div class="fs-layout-cell layout-item-0" style="width: 100%">
+              <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+                <%=link_to h(truncate(articolo.titolo, :length => 200)), :controller =>  articolo.section.top_section.top_menu.key + '/sezione/'+  articolo.section.top_section_id.to_s  , :action => 'articolo', :id => articolo.id %>
+              </h4>
+                 <span style="color:#ffffff;" class="fs-sections"><%= articolo.top_section %> > <%= articolo.section %>
+                </span>
+                <br/>
+                 <%# articolo.section.issues.count %>
+                <span class="fs-postauthoricon">  Autore:<%= h articolo.author %>
+                </span>
+                <br/>
+                <%= articolo.riassunto %>
+                <%= link_to "Continua... ", {:controller => 'issues', :action => 'show', :id => articolo.id} %>
+            </div>
+          </div>
+        </div>
+      </div>
+        <br/>
+  <% end %>
+</article>
+<br/>
+<p class="pagination"><%= pagination_links_full  @issues_pages, @issues_count %></p>
+<div class="clearfix"></div>
+</div>
+          <%#sidebar a centro destra %>
+          <%= render :partial => 'blocco_sidebar1' %>
+          <%#sidebar a destra %>
+          <%= render :partial => 'blocco_sidebar2' %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
 <h2><%=l(:details_articolo)%></h2>
   In questa pagina:
 <h3> id= <%= @id %>
@@ -12,6 +73,7 @@
     <li>LINK: all'edizione dell'articolo</li>
     <li>LINK: alla sezione dell'articolo</li>
     <li>AZIONE: proponi un quesito legato a questo articolo</li>
-    <li>NETWORK: Mi piace? --> futuro</li>
-    <li>NETWORK: Commenta? --> futuro</li>
-  </ul> 
+futuro</li>
+ futuro</li>
+  </ul>
+-->
