--- a/public/stylesheets/editorial.css
+++ b/public/stylesheets/editorial.css
@@ -2273,6 +2273,7 @@ img.fs-lightbox-image.active {
     border-bottom: none;
     margin: 0 auto;
     width: 200px;
+    padding: 0;
 }
 
 .fs-content-layout .fs-sidebar2 {
@@ -2310,31 +2311,28 @@ img.fs-lightbox-image.active {
 
 
 .newsticker-jcarousellite {
-    width: 300px;
+    width: 100%;
 }
 
 .newsticker-jcarousellite ul li {
     list-style: none;
     display: block;
-    padding-bottom: 1px;
-    margin-bottom: 5px;
-    margin-top: 20px;
+    margin: 0 !important;
+    padding: 0 !important;
+    text-align: center;
 }
-.newsticker-jcarousellite ul li .fs-block ul li {
-    margin:0;
-    padding:0;
-}
+
 .newsticker-jcarousellite .thumbnail {
     float: left;
     width: 100%;
     height: 110px;
-    text-align: center;
 
 }
 
 .newsticker-jcarousellite .info {
-    width: 190px;
+    width: 100%;
     display: block;
+    margin-bottom: 10px;
 }
 
 .newsticker-jcarousellite .info span.cat {
@@ -2342,20 +2340,25 @@ img.fs-lightbox-image.active {
     font-size: 10px;
     color: #808080;
 }
+
 #newsticker-wrap {
-   width: 182px;
-   background: #EAF4F5;
-   padding: 0;
-   font-size: 12px;
-   margin: 0 auto;
+    width: 100%;
+    background: #EAF4F5;
+    padding: 0;
+    font-size: 12px;
+    margin: 0 auto;
 }
 
 #newsticker-wrap a {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 #newsticker-wrap img {
-   border: 2px solid #FFFFFF;
-margin: 0 auto;
+    border: 2px solid #FFFFFF;
+    margin: 0 auto;
 
+}
+
+.newsticker-jcarousellite ul li:before {
+    content: none !important;
 }
