--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -108,15 +108,14 @@
     <div class="fs-shapes">
       <div id="top-menu-fe">
         <div id="account-fe">
-          <%= render_menu :account_menu -%>
-          <%#render_menu :account_fe_menu -%>
+          <%= render_menu :account_fe_menu -%>
         </div>
         <%= content_tag(
                     'div',
                     "#{l(:label_logged_as)} #{link_to_user(User.current, :format => :username)}".html_safe,
                     :id => 'loggedas-fe') if User.current.logged? %>
         <%# render_menu :top_menu if User.current.logged? || !Setting.login_required? -%>
-        <%=render_menu :application_menu if !User.current.logged? %>
+        <%#render_menu :application_menu if !User.current.logged? %>
       </div>
 
       <h1 class="fs-headline" >
